<resources>
    <string name="app_name">PhotographPassword</string>
    <string name="enter_email_address_to_login">Enter email address to login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_email">Enter email</string>
    <string name="select_date_of_birth">Select date of birth</string>

    <string-array name="colors">
        <item>Select color</item>
        <item>Blue(#0000FF)</item>
        <item>Green(#00FF00)</item>
        <item>Black(#000000)</item>
        <item>Yellow(#FFFF00)</item>
        <item>Orange(#FFA500)</item>
        <item>Pink(#FFB6C1)</item>
        <item>Purple(##800080)</item>
        <item>Red(#FF0000)</item>
    </string-array>
    <string name="title_activity_dashboard">"Dashboard "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="_0">0</string>
    <string name="clock_wise">Clock Wise</string>
    <string name="anticlock_wise">AntiClock Wise</string>
    <string name="inner_orbit">Inner Orbit</string>
    <string name="outer_orbit">Outer Orbit</string>
    <string name="verify">Verify</string>
    <string name="chars">12345678abcdefgh</string>
    <string name="enter_otp_to_verify">Enter otp to verify</string>
    <string name="name">Name :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="date_of_birth">Date of birth :</string>
</resources>
