<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mywings.photographpassword.VerificationActivity">


    <TextView
        android:id="@+id/lblEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/email_address"
        android:textColor="@color/colorAccent" />


    <RelativeLayout
        android:id="@+id/rlFlow"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:background="@drawable/i1"
        android:padding="7dp">


        <FrameLayout
            android:id="@+id/flOuter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp">


        </FrameLayout>


        <FrameLayout
            android:id="@+id/flInner"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:layout_centerInParent="true">


        </FrameLayout>


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"

        android:weightSum="100">


        <Button
            android:id="@+id/btnClockWise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/clock_wise" />

        <Button
            android:id="@+id/btnAntiClockWise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/anticlock_wise" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"

        android:weightSum="100">


        <Button
            android:id="@+id/btnOuterOrbit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/outer_orbit" />

        <Button
            android:id="@+id/btnInnerOrbit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/inner_orbit" />

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/verify" />

</LinearLayout>
